crates/app/symify/src/snapshots/symify__output__tests__add_human_applied.snap
---
source: crates/app/symify/src/output.rs
expression: "String::from_utf8(buf).unwrap()"
---
added .bashrc to dots (/cfg/symify.toml)
  adopted
