crates/app/symify/src/snapshots/symify__output__tests__list_human_brief.snap
---
source: crates/app/symify/src/output.rs
expression: "String::from_utf8(brief).unwrap()"
---
dots  /home/user → /store/dots  symlink  backup  (2 entries)
