crates/app/symify/src/snapshots/symify__output__tests__list_human_entries.snap
---
source: crates/app/symify/src/output.rs
expression: "String::from_utf8(full).unwrap()"
---
dots  /home/user → /store/dots  symlink  backup  (2 entries)
  .bashrc  /home/user/.bashrc → /store/dots/.bashrc
  .vimrc  /home/user/.vimrc → /store/dots/vim/vimrc
