crates/app/symify/src/snapshots/symify__output__tests__remove_human_restored.snap
---
source: crates/app/symify/src/output.rs
expression: s
---
removed .bashrc from dots (/cfg/symify.toml)
  restored: standalone copy at the live path
