crates/app/symify/src/snapshots/symify__output__tests__run_human_every_outcome.snap
---
source: crates/app/symify/src/output.rs
expression: s
---
  + adopt    dots/adopt
  + relink   dots/relink
  + link     dots/link
  + push     dots/push (+1 ~1)
  + pull     dots/pull (+1)
  ! push     dots/drifted (+1 -1, drift)
  = ok       dots/clean
  - skipped  dots/skipped (nothing to do)
  ! conflict dots/conflicted
  · disabled dots/off
  x failed   dots/broken (boom)

sync: 6 changed, 1 ok, 1 skipped, 1 disabled, 2 conflicts, 1 failed
